[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

[[bin]]
name = "day-01"
path = "src/01.rs"

[[bin]]
name = "day-02"
path = "src/02.rs"

[[bin]]
name = "day-03"
path = "src/03.rs"

[[bin]]
name = "day-04"
path = "src/04.rs"

[[bin]]
name = "day-05"
path = "src/05.rs"

[[bin]]
name = "day-06"
path = "src/06.rs"

[[bin]]
name = "day-07"
path = "src/07.rs"

[[bin]]
name = "day-08"
path = "src/08.rs"