[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"

[[bin]]
name = "day-01"
path = "src/01.rs"

[[bin]]
name = "day-02"
path = "src/02.rs"

[[bin]]
name = "day-03"
path = "src/03.rs"

[[bin]]
name = "day-04"
path = "src/04.rs"

[[bin]]
name = "day-05"
path = "src/05.rs"

[[bin]]
name = "day-06"
path = "src/06.rs"

[[bin]]
name = "day-07"
path = "src/07.rs"

[[bin]]
name = "day-08"
path = "src/08.rs"

[[bin]]
name = "day-09"
path = "src/09.rs"

[[bin]]
name = "day-10"
path = "src/10.rs"

[[bin]]
name = "day-11"
path = "src/11.rs"

[[bin]]
name = "day-12"
path = "src/12.rs"

[[bin]]
name = "day-13"
path = "src/13.rs"

[[bin]]
name = "day-14"
path = "src/14.rs"
